--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="82">
     <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="./assets/logoGameHaven.png" alt="logo strony GameHaven">
+                <img src="assets/logoGameHaven.png" alt="logo strony GameHaven">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
 
     <header class="hero-video" id="home">
         <video class="video" autoplay muted playsinline>
-            <source src="./assets/hero-video.mp4" type="video/mp4">
+            <source src="assets/hero-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="hero-text text-center p-3">
@@ -162,7 +162,7 @@
                         <div class="col">
 
                             <div class="card me-3 h-100">
-                                <img src="./assets/graphics-card-small.jpg" class="card-img-top "
+                                <img src="assets/graphics-card-small.jpg" class="card-img-top "
                                     alt="gaming computer with powerful graphics card">
                                 <div class="card-body">
                                     <h5 class="card-title">Karty graficzne</h5>
@@ -178,7 +178,7 @@
                         <div class="col">
 
                             <div class="card me-3 h-100">
-                                <img src="./assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
+                                <img src="assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
                                 <div class="card-body">
                                     <h5 class="card-title">Procesory z Intela lub AMD</h5>
                                     <p class="card-text">
@@ -193,8 +193,7 @@
 
                         <div class="col">
                             <div class="card me-3 h-100">
-                                <img src="./assets/watercooling-small.jpg" class="card-img-top"
-                                    alt="watercooling system">
+                                <img src="assets/watercooling-small.jpg" class="card-img-top" alt="watercooling system">
                                 <div class="card-body">
                                     <h5 class="card-title">System chłodzenia wodnego</h5>
                                     <p class="card-text"> Korzystamy z <strong>najnowocześniejszych systemów
@@ -210,7 +209,7 @@
                         </div>
                         <div class="col">
                             <div class="card me-3 h-100">
-                                <img src="./assets/design-pc-small.jpg" class="card-img-top" alt="design pc gamer">
+                                <img src="assets/design-pc-small.jpg" class="card-img-top" alt="design pc gamer">
                                 <div class="card-body">
                                     <h5 class="card-title">Nowoczesny design naszych PC</h5>
                                     <p class="card-text">
@@ -250,7 +249,7 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/graphics-card-big.jpg" class="d-block w-100"
+                            <img src="assets/graphics-card-big.jpg" class="d-block w-100"
                                 alt="gaming computer with powerful graphics card">
                             <div class="carousel-caption d-block">
                                 <h5>Karty graficzne</h5>
@@ -263,7 +262,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/cpu-big.jpg" class="d-block w-100" alt="gaming computer with cpu">
+                            <img src="assets/cpu-big.jpg" class="d-block w-100" alt="gaming computer with cpu">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Procesory z Intela lub AMD</h5>
                                 <p>
@@ -275,7 +274,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/watercooling-big.jpg" class="d-block w-100" alt="watercooling system">
+                            <img src="assets/watercooling-big.jpg" class="d-block w-100" alt="watercooling system">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>System chłodzenia wodnego</h5>
                                 <p>
@@ -289,7 +288,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/design-pc-big.jpg" class="d-block w-100" alt="design pc gamer">
+                            <img src="assets/design-pc-big.jpg" class="d-block w-100" alt="design pc gamer">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Nowoczesny design naszych PC</h5>
                                 <p>
@@ -351,6 +350,7 @@
                             <button class="btn-reservation" data-bs-toggle="modal" data-bs-target="#reservationModal"
                                 onclick="setReservation(18, 'PC')">Wybierz
                                 datę</button>
+
 
                             <div class="img-wrap img-pc">
                                 <img src="assets/img-prices/woman-small.jpg"
@@ -441,20 +441,49 @@
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Imię i nazwisko:</label>
                                     <input type="text" id="name" class="form-control" required>
+                                    <div class="invalid-feedback" id="nameError"></div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Adres e-mail:</label>
                                     <input type="email" id="email" class="form-control" required>
+                                    <div class="invalid-feedback" id="emailError"></div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="datePicker" class="form-label">Wybierz datę i godzinę:</label>
-                                    <input type="text" id="datePicker" class="form-control" required>
+                                    <label for="phone" class="form-label">Telefon:</label>
+                                    <input type="tel" id="phone" class="form-control" required maxlength="11"
+                                        placeholder="123-456-789">
+                                    <div class="invalid-feedback" id="phoneError"></div>
                                 </div>
+                                <div class="mb-3 date-picker-container">
+                                    <label for="datePicker" class="form-label">Wybierz datę i godzinę:</label>
+                                    <input type="date" id="datePicker" class="form-control" autocomplete="off" required>
+                                    <div class="invalid-feedback date-error" id="dateError">Proszę wybrać datę</div>
+                                </div>
+
+                                <!-- Places for error messages -->
+                                <p id="errorMessage" class="text-danger"></p>
+                                <p id="infoMessage" class="custom-info d-none"></p>
 
                                 <button type="submit" class="btn btn-success w-100" id="reserveButton"
                                     disabled>Zarezerwuj i
                                     zapłać</button>
                             </form>
+                            <div class="mt-3">
+                                <button class="btn btn-outline-info w-100" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#occupancyCollapse">
+                                    Zobacz dostępność stanowisk
+                                </button>
+                                <div id="occupancyCollapse" class="collapse mt-2">
+                                    <div class="card card-body">
+                                        <h6 class="mb-2">Stanowiska na wybrany dzień:</h6>
+                                        <div class="loading-indicator text-center" style="display: none;">
+                                            <div class="spinner-border spinner-border-sm" role="status"></div>
+                                            <span>Ładuję dane...</span>
+                                        </div>
+                                        <ul class="occupancy-list list-unstyled mb-0"></ul>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -490,7 +519,7 @@
 
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
+                            <img src="assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
                             <div class="card-body ">
                                 <h5 class="card-title mb-3">Tester Gier</h5>
                                 <p class="card-text">Amal jest świetny w swojej dziedzinie; <span>żadne błędy w grach
@@ -506,7 +535,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/assets/team/man1.jpg" class="card-img-top img-fluid"
+                            <img src="assets/team/man1.jpg" class="card-img-top img-fluid"
                                 alt="Jagdisz inżynier sprzętu komputerowego">
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Inżynier sprzętu komputerowego</h5>
@@ -540,7 +569,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/assets/team/man3.jpg" class="card-img-top img-fluid"
+                            <img src="assets/team/man3.jpg" class="card-img-top img-fluid"
                                 alt="Arkadiusz nasz dramaturg komputerowy">
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Dramaturg komputerowy</h5>
@@ -557,7 +586,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/assets/team/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
+                            <img src="assets/team/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Ochroniarz Paweł</h5>
                                 <p class="card-text"><span>Ochroniarz naszego klubu GameHaven</span>, potrafi szybko
@@ -826,14 +855,14 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="./js/reservation.js"></script>
-    <script src="./js/current-year.js"></script>
+    <script src="js/reservation.js"></script>
+    <script src="js/current-year.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/js/aos-animations.js"></script>
-    <script src="./js/swiper.js"></script>
-    <script src="./js/video.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="js/swiper.js"></script>
+    <script src="js/video.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
