--- a/public/index.html
+++ b/public/index.html
@@ -990,24 +990,18 @@
 
     </main>
 
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/js/bootstrap.bundle.min.js"
         integrity="sha512-Tc0i+vRogmX4NN7tuLbQfBxa8JkfUSAxSFVzmU31nVdHyiHElPPy2cWfFacmCJKw0VqovrzKhdd2TSTMdAxp2g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 
-    <script type="module" src="/config/config-client.js" defer></script>
-
-    <script type="module" src="/js/reservation.js" defer></script>
-    <script type="module" src="/js/contact.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
 
-    <script src="/js/current-year.js" defer></script>
-    <script src="/js/aos-animations.js" defer></script>
-    <script src="/js/swiper.js" defer></script>
-    <script src="/js/video.js" defer></script>
-    <script src="/js/main.js" defer></script>
+    <script type="module" src="/config/config-client.js" defer></script>
+    <script type="module" src="/js/reservation.js" defer></script>
+    <script type="module" src="/js/contact.js" defer></script>
+
+    <script src="./js/bundle.min.js" defer></script>
     <script src="/env.js" defer></script>
 
 </body>
